# review-dispatcher

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  LICENSE  README.md  TROUBLESHOOTING.md  V1_TODO.md  instruction.md.example
.github/workflows/: ci.yml  deploy-docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  catppuccin.css  index.md
docs/src/commands/: activity.md  age.md  approve.md  assign.md  attention.md  blocked.md  browse.md  catchup.md  chase.md  chat.md  ci.md  claim.md  clean.md  comment.md  compare.md  config.md  conflicts.md  delegate.md  diff.md  digest.md  export.md  files.md  filter.md  focus.md  follow.md  health.md  history.md  info.md  labels.md  list.md  load.md  mentions.md  mine.md  monitor-status.md  monitor-stop.md  monitor.md  ping.md  quick.md  ready.md  report.md  (+17 more)
docs/theme/: catppuccin.css  head.hbs  index.hbs
src/: chat.rs  cli.rs  config.rs  dispatcher.rs  github.rs  github.rs.bak  lib.rs  logger.rs  main.rs  notifications.rs  stack.rs  terminal.rs  writer.rs
src/commands/: dispatch.rs  helpers.rs  mod.rs  stack.rs
tests/: config_tests.rs  logger_tests.rs  stack_tests.rs
