[package]
name = "review-dispatcher"
version = "0.9.0"
edition = "2021"

[dependencies]
tokio        = { version = "1", features = ["full"] }
octocrab     = "0.49"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
clap         = { version = "4", features = ["derive", "env"] }
dotenvy      = "0.15"
anyhow       = "1"
chrono       = { version = "0.4", features = ["serde"] }
colored      = "3"
ctrlc        = "3.4"
dirs         = "5.0"
open         = "5"
