[package]
name = "prctrl"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio        = { version = "1.50", features = ["full"] }
futures      = "0.3"
octocrab     = "0.49.7"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "1.1"
clap         = { version = "4.6", features = ["derive", "env"] }
dotenvy      = "0.15"
anyhow       = "1"
chrono       = { version = "0.4", features = ["serde"] }
colored      = "3"
ctrlc        = "3.4"
dirs         = "6.0"
open         = "5"
